# cli

./: Cargo.toml  README.md  taskleef-completion.bash  taskleef-completion.zsh  todo
docs/: MCP_SERVER.md
docs/plans/: 2026-01-20-add-comment-to-card-design.md
ralph/: AGENTS.md  CLAUDE.md  PROMPT.md
src/: cli.rs  client.rs  config.rs  display.rs  error.rs  main.rs  models.rs  resolve.rs
src/commands/: board.rs  mod.rs  project.rs  subtask.rs  todo.rs
src/tui/: app.rs  mod.rs  ui.rs
