[package]
name = "taskleef"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dialoguer = "0.11"
dirs = "6"
futures = "0.3"
async-trait = "0.1"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
